// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DocumentsModule Should render file lists correctly 1`] = `
<DocumentsModule
  ajaxErrorHandler={[Function]}
  clients={
    Object {
      "100000": Object {
        "clientName": "Ozzy Perez",
        "id": "100000",
        "projects": Object {
          "1": Object {
            "category": Object {
              "description": "Tax Return",
              "id": 1,
            },
            "dateCreated": "2018-04-26T19:58:20.000+0000",
            "dateDue": "2017-04-15",
            "documents": Object {
              "AAAAAAAAAAA": Object {
                "accessLevel": "PUBLIC",
                "action": Array [],
                "category": Object {
                  "description": "Workpapers",
                  "id": 3,
                },
                "description": "file2",
                "fileType": "PDF",
                "id": "AAAAAAAAAAA",
                "year": 2017,
              },
              "ASDFHOWEOUH": Object {
                "accessLevel": "PUBLIC",
                "action": Array [],
                "category": Object {
                  "description": "Notes",
                  "id": 4,
                },
                "description": "notes",
                "fileType": "TXT",
                "id": "ASDFHOWEOUH",
                "year": 2017,
              },
              "BBBBBBBBBBB": Object {
                "accessLevel": "PUBLIC",
                "action": Array [],
                "category": Object {
                  "description": "Workpapers",
                  "id": 3,
                },
                "description": "file2",
                "fileType": "EXCEL",
                "id": "BBBBBBBBBBB",
                "year": 2017,
              },
            },
            "id": 1,
            "name": "2017 Form 1040",
          },
        },
      },
      "100001": Object {
        "clientName": "Alondra Perez",
        "id": "100001",
        "projects": Object {
          "1": Object {
            "category": Object {
              "description": "Tax Return",
              "id": 1,
            },
            "dateCreated": "2018-04-26T19:58:20.000+0000",
            "dateDue": "2017-04-15",
            "documents": Object {
              "AAAAAAAAAAA": Object {
                "accessLevel": "PUBLIC",
                "action": Array [],
                "category": Object {
                  "description": "Workpapers",
                  "id": 3,
                },
                "description": "file2",
                "fileType": "PDF",
                "id": "AAAAAAAAAAA",
                "year": 2017,
              },
              "ASDFHOWEOUH": Object {
                "accessLevel": "PUBLIC",
                "action": Array [],
                "category": Object {
                  "description": "Notes",
                  "id": 4,
                },
                "description": "notes",
                "fileType": "TXT",
                "id": "ASDFHOWEOUH",
                "year": 2017,
              },
              "BBBBBBBBBBB": Object {
                "accessLevel": "PUBLIC",
                "action": Array [],
                "category": Object {
                  "description": "Workpapers",
                  "id": 3,
                },
                "description": "file2",
                "fileType": "EXCEL",
                "id": "BBBBBBBBBBB",
                "year": 2017,
              },
            },
            "id": 1,
            "name": "2017 Form 1040",
          },
        },
      },
    }
  }
  downloadFile={[Function]}
  getDocuments={[Function]}
  getProjects={[Function]}
  openDocument={[Function]}
>
  <Module
    buttonActions={
      Array [
        [Function],
      ]
    }
    displayType="grid-view"
    title="Documents"
  >
    <div
      className="Module"
      id="DocumentsModule"
    >
      <div
        id="toolbar"
      >
        <h1>
          Documents
        </h1>
        <div
          className="toolbarButtons"
        >
          <button
            className="toggleDisplayType toolbar-button button-grid-view"
            key="0"
            onClick={[Function]}
          />
        </div>
      </div>
      <Breadcrumbs
        breadcrumbs={
          Array [
            Object {
              "clickHandler": [Function],
              "text": "Home",
            },
            Object {
              "clickHandler": [Function],
              "text": "Alondra Perez",
            },
            Object {
              "clickHandler": [Function],
              "text": "2017 Form 1040",
            },
            null,
          ]
        }
      >
        <div
          id="breadcrumbs"
        >
          <div
            id="breadcrumb-slider"
          >
            <div
              key="0"
              onClick={[Function]}
            >
              Home
            </div>
            <div
              key="1"
              onClick={[Function]}
            >
              Alondra Perez
            </div>
            <div
              key="2"
              onClick={[Function]}
            >
              2017 Form 1040
            </div>
          </div>
        </div>
      </Breadcrumbs>
      <ul
        className="grid-view"
      >
        <IconLink
          dblClickHandler={[Function]}
          details={
            Object {
              "category": "Workpapers",
              "year": 2017,
            }
          }
          fileType="PDF"
          key="AAAAAAAAAAA"
          name="file2"
          view="grid-view"
        >
          <li
            className="PDF"
            onDoubleClick={[Function]}
            title="file2"
          >
            <p>
              file2
            </p>
            <span
              className="details"
            />
          </li>
        </IconLink>
        <IconLink
          dblClickHandler={[Function]}
          details={
            Object {
              "category": "Workpapers",
              "year": 2017,
            }
          }
          fileType="EXCEL"
          key="BBBBBBBBBBB"
          name="file2"
          view="grid-view"
        >
          <li
            className="EXCEL"
            onDoubleClick={[Function]}
            title="file2"
          >
            <p>
              file2
            </p>
            <span
              className="details"
            />
          </li>
        </IconLink>
        <IconLink
          dblClickHandler={[Function]}
          details={
            Object {
              "category": "Notes",
              "year": 2017,
            }
          }
          fileType="TXT"
          key="ASDFHOWEOUH"
          name="notes"
          view="grid-view"
        >
          <li
            className="TXT"
            onDoubleClick={[Function]}
            title="notes"
          >
            <p>
              notes
            </p>
            <span
              className="details"
            />
          </li>
        </IconLink>
      </ul>
    </div>
  </Module>
</DocumentsModule>
`;

exports[`DocumentsModule Should render folder lists correctly 1`] = `
<DocumentsModule
  ajaxErrorHandler={[Function]}
  clients={
    Object {
      "100000": Object {
        "clientName": "Ozzy Perez",
        "id": "100000",
        "projects": Object {
          "1": Object {
            "category": Object {
              "description": "Tax Return",
              "id": 1,
            },
            "dateCreated": "2018-04-26T19:58:20.000+0000",
            "dateDue": "2017-04-15",
            "documents": Object {
              "AAAAAAAAAAA": Object {
                "accessLevel": "PUBLIC",
                "action": Array [],
                "category": Object {
                  "description": "Workpapers",
                  "id": 3,
                },
                "description": "file2",
                "fileType": "PDF",
                "id": "AAAAAAAAAAA",
                "year": 2017,
              },
              "ASDFHOWEOUH": Object {
                "accessLevel": "PUBLIC",
                "action": Array [],
                "category": Object {
                  "description": "Notes",
                  "id": 4,
                },
                "description": "notes",
                "fileType": "TXT",
                "id": "ASDFHOWEOUH",
                "year": 2017,
              },
              "BBBBBBBBBBB": Object {
                "accessLevel": "PUBLIC",
                "action": Array [],
                "category": Object {
                  "description": "Workpapers",
                  "id": 3,
                },
                "description": "file2",
                "fileType": "EXCEL",
                "id": "BBBBBBBBBBB",
                "year": 2017,
              },
            },
            "id": 1,
            "name": "2017 Form 1040",
          },
        },
      },
      "100001": Object {
        "clientName": "Alondra Perez",
        "id": "100001",
        "projects": Object {
          "1": Object {
            "category": Object {
              "description": "Tax Return",
              "id": 1,
            },
            "dateCreated": "2018-04-26T19:58:20.000+0000",
            "dateDue": "2017-04-15",
            "documents": Object {
              "AAAAAAAAAAA": Object {
                "accessLevel": "PUBLIC",
                "action": Array [],
                "category": Object {
                  "description": "Workpapers",
                  "id": 3,
                },
                "description": "file2",
                "fileType": "PDF",
                "id": "AAAAAAAAAAA",
                "year": 2017,
              },
              "ASDFHOWEOUH": Object {
                "accessLevel": "PUBLIC",
                "action": Array [],
                "category": Object {
                  "description": "Notes",
                  "id": 4,
                },
                "description": "notes",
                "fileType": "TXT",
                "id": "ASDFHOWEOUH",
                "year": 2017,
              },
              "BBBBBBBBBBB": Object {
                "accessLevel": "PUBLIC",
                "action": Array [],
                "category": Object {
                  "description": "Workpapers",
                  "id": 3,
                },
                "description": "file2",
                "fileType": "EXCEL",
                "id": "BBBBBBBBBBB",
                "year": 2017,
              },
            },
            "id": 1,
            "name": "2017 Form 1040",
          },
        },
      },
    }
  }
  downloadFile={[Function]}
  getDocuments={[Function]}
  getProjects={[Function]}
  openDocument={[Function]}
>
  <Module
    buttonActions={
      Array [
        [Function],
      ]
    }
    displayType="grid-view"
    title="Documents"
  >
    <div
      className="Module"
      id="DocumentsModule"
    >
      <div
        id="toolbar"
      >
        <h1>
          Documents
        </h1>
        <div
          className="toolbarButtons"
        >
          <button
            className="toggleDisplayType toolbar-button button-grid-view"
            key="0"
            onClick={[Function]}
          />
        </div>
      </div>
      <Breadcrumbs
        breadcrumbs={
          Array [
            null,
            null,
            null,
            null,
          ]
        }
      >
        <div
          id="breadcrumbs"
        >
          <div
            id="breadcrumb-slider"
          />
        </div>
      </Breadcrumbs>
      <ul
        className="grid-view"
      >
        <IconLink
          dblClickHandler={[Function]}
          details={
            Object {
              "id": "100001",
            }
          }
          key="100001"
          name="Alondra Perez"
          view="grid-view"
        >
          <li
            onDoubleClick={[Function]}
            title="Alondra Perez"
          >
            <p>
              Alondra Perez
            </p>
            <span
              className="details"
            />
          </li>
        </IconLink>
        <IconLink
          dblClickHandler={[Function]}
          details={
            Object {
              "id": "100000",
            }
          }
          key="100000"
          name="Ozzy Perez"
          view="grid-view"
        >
          <li
            onDoubleClick={[Function]}
            title="Ozzy Perez"
          >
            <p>
              Ozzy Perez
            </p>
            <span
              className="details"
            />
          </li>
        </IconLink>
      </ul>
    </div>
  </Module>
</DocumentsModule>
`;
